--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/UART.sln
+/UART/UART.vcxproj
+/UART/UART.vcxproj.filters
